@@ -1,4 +1,6 @@
 1.13 -> 1.14:
+    - jbj: add POPT_ARG_ARGV, starting with the poptSaveString() method.
+    - jbj: add help for POPT_ARG_LONGLONG.
     - jbj: hmmm, POSIXly correct --echo-args needs fixing, disable for now.
     - jbj: poptint.h: typedef's for string and string arrays.
     - jbj: add POPT_ARG_LONGLONG, and poptSaveLongLong().
